--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,2 +1,5 @@
 @primary-font-color: #000;
-@second-color: #dd2b18;
+@first-color: #f3f4f9;
+@second-color: #73c986;
+@nav-bg: #222;
+@nav-color: white;
