--- a/src/less/section.less
+++ b/src/less/section.less
@@ -2,7 +2,7 @@ section {
 	height: 800px;
 	border: 1px solid black;
 
-	&:nth-of-type(odd) {
+	&:nth-of-type(even) {
 		background-color: @first-color;
 	}
 }
