added footer, header styles

--- a/src/less/nav.less
+++ b/src/less/nav.less
@@ -1,4 +1,13 @@
-#navbar.navbar {
-	color: @nav-color;
+.navbar {
+	color: @first-color;
 	background: @nav-bg;
+
+	a {
+		color: @first-color;
+		cursor: pointer;
+	}
+
+	.navbar-toggler-icon{
+		background-image: url('../images/icons/menu-symbol.svg');
+	}
 }
