--- a/src/less/section.less
+++ b/src/less/section.less
@@ -3,6 +3,6 @@ section {
 	border: 1px solid black;
 
 	&:nth-of-type(even) {
-		background-color: @first-color;
+		/*background-color: @first-color;*/
 	}
 }
