--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,5 +1,8 @@
 @primary-font-color: #000;
 @first-color: #f3f4f9;
 @second-color: #73c986;
+@third-color: white;
+@dim-color: #979797;
 @nav-bg: #222;
 @validation-color: #a94442;
+@border-color: #d3d3d3;
