--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -1,124 +1,135 @@
 .menu {
-	background-color: @first-color;
-	overflow: hidden;
-
-	background-image: url('../images/content-bg.jpg');
-	background-position: bottom left;
-	background-repeat: repeat-x;
-	background-size: cover;
-
-
 	&--tabs {
 		padding-left: 0;
-		border-bottom: 1px solid @border-color;
-		margin: 0 -100%;
-		padding: 0 100%;
 	}
 
 	&--tab {
+		position: relative;
 		width: 150px;
 		margin: 0 10px;
-		padding: 10px 10px 0 10px;
+		padding: 8px 15px;
+		border: 1px solid transparent;
+		border-radius: 50px;
 		cursor: pointer;
-		color: @second-color;
 		list-style: none;
 		text-align: center;
 
+		&::after {
+			content: '';
+			position: absolute;
+			width: 12px;
+			height: 12px;
+			bottom: -6px;
+			left: 70px;
+			transform: rotate(45deg);
+			background-color: @third-color;
+			border-bottom: 1px solid transparent;
+			border-right: 1px solid transparent;
+		}
+
 		&.active {
-			position: relative;
-			color: @second-color;
-			border: 1px solid @border-color;
-			margin-bottom: -1px;
-			border-bottom: none;
-			border-radius: 26px 26px 0 0;
-			background: @third-color;
+			border-color: @active-tab-color;
 
-			.menu--tab-title {
-				background-color: @second-color;
-				border-radius: 50px;
-				color: @third-color;
+			&::after {
+				border-color: @active-tab-color;
 			}
+		}
 
-			.menu--tab-border {
-				position: absolute;
-				bottom: 0;
-				width: 20px;
-				height: 20px;
-				background: @first-color;
-				background-color: @third-color;
+		&:not(.active):hover {
+			border-color: @active-tab-color-o;
 
-				&::after {
-					content: '';
-					position: absolute;
-					width: 20px;
-					height: 20px;
-					bottom: 0;
-					left: 0;
-					background: @first-color;
-					border-bottom: 1px solid @border-color;
-				}
-
-				&-left {
-					right: 100%;
-
-					&::after {
-						border-right: 1px solid @border-color;
-						border-radius: 0 0 15px 0;
-					}
-				}
-
-				&-right {
-					left: 100%;
-
-					&::after {
-						border-left: 1px solid @border-color;
-						border-radius: 0 0 0 15px;
-					}
-				}
+			&::after {
+				border-color: @active-tab-color-o;
 			}
 		}
 
 		&-title {
-			margin-bottom: 0;
+			margin-bottom: -10px;
 			font-weight: bold;
 			font-size: 32px;
 			line-height: 40px;
+			color: @second-color;
 		}
 
 		&-sub {
-
+			color: @dim-color;
 		}
 	}
 
 	&--days {
 		padding-left: 0;
 		list-style: none;
+		color: @second-color;
 		
 		li {
-			padding: 10px 10px 0;
+			padding: 14px 10px 13px 10px;
 			cursor: pointer;
+			font-size: 18px;
+			line-height: 18px;
+			text-transform: uppercase;
+			border: 1px solid transparent;
 		}
 
 		li.active {
-			color: red;
+			background-color: @first-color;
+			border-radius: 20px 0 20px 0;
+			border: 1px solid @second-color-o;
+		}
+
+		li.disabled {
+			color: @dim-color;
+			pointer-events: none;
+			opacity: 0.5;
 		}
 	}
 
-	&--container,
-	&--order {
-		background: @third-color;
+	&--container {
 		margin: 0 -10px;
+	}
+
+
+	&--order {
+		padding-top: 15px;
 	}
 }
 
 .menu-content {
-	padding: 10px;
+	padding: 0 20px;
+
+	&--container {
+		padding-top: 15px;
+		border-top: 1px solid @border-color;
+		border-bottom: 1px solid @border-color;
+	}
+
+	&--info {
+		padding-top: 10px;
+		padding-bottom: 10px;
+		font-size: 16px;
+		line-height: 16px;
+		border-bottom: 1px solid @border-color;
+
+		&-total {
+			padding-top: 8px;
+			margin-right: 80px;
+			white-space: nowrap;
+		}
+
+		&-column {
+			text-align: center;
+
+			small {
+				color: @dim-color;
+			}
+		}
+	}
 
 	&--day {
 		margin-bottom: 15px;
 
 		&-title {
 			margin-bottom: 0;
+			font-weight: bold;
 		}
 
 		&-info {
