--- a/src/less/variables.less
+++ b/src/less/variables.less
@@ -1,8 +1,12 @@
 @primary-font-color: #000;
-@first-color: #f3f4f9;
-@second-color: #73c986;
+@first-color: #f5f5f5;
+@second-color: #28d78a;
+@second-color-o: rgba(40, 215, 138, 0.8);
 @third-color: white;
 @dim-color: #979797;
+@active-tab-color: #c8fa01;
+@active-tab-color-o: rgba(200, 250, 1, 0.7);
 @nav-bg: #222;
 @validation-color: #a94442;
-@border-color: #d3d3d3;
+@border-color: #c9ffe7;
+@bg-success: #00cfa7;
