--- a/src/less/checkbox.less
+++ b/src/less/checkbox.less
@@ -15,12 +15,13 @@
 
 		&+label{
 			position: relative;
-			padding: 0 0 0 60px;
+			padding: 0 0 0 50px;
+			white-space: nowrap;
 
 			&::before{
 				content: '';
 				position: absolute;
-				top: -4px;
+				top: 2px;
 				left: 0;
 				width: 40px;
 				height: 20px;
@@ -32,7 +33,7 @@
 			&::after{
 				content: '';
 				position: absolute;
-				top: -3px;
+				top: 3px;
 				left: 2px;
 				width: 18px;
 				height: 18px;
