--- a/src/less/order.less
+++ b/src/less/order.less
@@ -2,6 +2,44 @@
 	&--dialog {
 		max-width: 80%;
 	}
+
+	&--success {
+		width: 150px;
+		height: 60px;
+		border-radius: 50px;
+		border: none;
+		background-color: @second-color;
+		color: white;
+		font-weight: bold;
+		cursor: pointer;
+	}
+
+	&--close {
+		position: absolute;
+		right: 15px;
+		top: 13px;
+	}
+
+	.modal-header {
+		display: block;
+		text-align: center;
+	}
+
+	&-details {
+		padding: 0 30px;
+
+		p {
+			margin-bottom: 0;
+		}
+
+		&--hide,
+		&--show {
+			color: @dim-color;
+			font-size: 14px;
+			text-align: center;
+			cursor: pointer;
+		}
+	}
 }
 
 @media (min-width: 1200px) {
