added fonts, updated nav, home styles

--- a/src/less/footer.less
+++ b/src/less/footer.less
@@ -1,7 +1,7 @@
 .footer {
 	padding-bottom: 1rem;
 	background-color: @nav-bg;
-	color: @first-color;
+	/*color: @first-color;*/
 
 	address {
 		padding-top: 2rem;
