--- a/src/less/nav.less
+++ b/src/less/nav.less
@@ -1,13 +1,37 @@
 .navbar {
-	color: @first-color;
+	color: @grey-color;
 	background: @nav-bg;
-
-	a {
-		color: @first-color;
+	
+	&.navbar-light .navbar-nav .nav-link {
+		color: @grey-color;
+		font-weight: bold;
 		cursor: pointer;
 	}
-
-	.navbar-toggler-icon{
+	
+	/*.navbar-toggler-icon{
 		background-image: url('../images/icons/menu-symbol.svg');
+	}*/
+}
+
+.navbar-outer {
+	padding: 10px;
+	
+	&--side {
+		width: 220px;
+		color: @grey-color;
+		font-size: 14px;
+
+		&-img {
+			width: 20px;
+			margin-right: 10px;
+		}
+	}
+
+	&--logo {
+		width: 210px;
+		height: 65px;
+		background-image: url('../images/logo.png');
+		background-repeat: no-repeat;
+		background-size: 100%;
 	}
 }
