--- a/src/less/order.less
+++ b/src/less/order.less
@@ -23,6 +23,31 @@
 	.modal-header {
 		display: block;
 		text-align: center;
+		background-color: @second-color;
+
+		.modal-title {
+			font-family: Comfortaa;
+			font-size: 1.45rem;
+			color: white;
+		}
+
+		.close {
+			opacity: 1;
+			color: white;
+			cursor: pointer;
+
+			&:hover {
+				opacity: .7;
+			}
+		}
+	}
+
+	.modal-body {
+		padding-bottom: 0;
+	}
+
+	.form-group--delivery {
+		margin-bottom: 0;
 	}
 
 	&-details {
