added menu, howItWork

--- a/src/less/about.less
+++ b/src/less/about.less
@@ -1,13 +1,13 @@
 @about-img-size: 5em;
 
 .about {
-	&--img {
+	&--icon {
 		float: left;
 		width: @about-img-size;
 		height: @about-img-size;
 	}
 
-	&--text {
+	&--description {
 		margin-left: 6em;
 	}
 }
