--- a/src/less/endless.less
+++ b/src/less/endless.less
@@ -1,6 +1,5 @@
 @import 'variables.less';
 @import 'global.less';
-@import 'section.less';
 @import 'nav.less';
 @import 'about.less';
 @import 'order.less';
@@ -10,3 +9,4 @@
 @import 'menu.less';
 @import 'checkbox.less';
 @import 'fonts.less';
+@import 'howItWork.less';
