--- a/src/less/home.less
+++ b/src/less/home.less
@@ -29,11 +29,11 @@
 	}
 
 	&--order {
-		padding: 12px;
+		padding: 15px;
 		border-radius: 4em;
-		border: 4px solid @second-color;
-		background: none;
-		color: @second-color;
+		border: none;
+		background: @second-color;
+		color: white;
 		font-weight: bold;
 		cursor: pointer;
 	}
