--- a/src/less/menu.less
+++ b/src/less/menu.less
@@ -100,6 +100,8 @@
 		}
 
 		&-sum {
+			white-space: nowrap;
+			
 			b {
 				line-height: 18px;
 			}
@@ -163,6 +165,8 @@
 		&-title {
 			margin-bottom: 0;
 			font-weight: bold;
+			line-height: 1.2;
+			font-size: 16px;
 		}
 
 		&-info {
