--- a/src/less/nav.less
+++ b/src/less/nav.less
@@ -6,6 +6,9 @@
 		color: @grey-color;
 		font-weight: bold;
 		cursor: pointer;
+		font-size: 1.3rem;
+		padding-right: 0.7rem;
+    padding-left: 0.7rem;
 	}
 	
 	/*.navbar-toggler-icon{
@@ -20,6 +23,7 @@
 		width: 220px;
 		color: @grey-color;
 		font-size: 14px;
+		white-space: nowrap;
 
 		&-img {
 			width: 20px;
